# CreditLense

./: .env  .env.template  .gitignore  .prettierrc config  License.txt  README.md  financial_data.db  llm_comparison.ipynb  main.py  pyproject.toml  pytest.ini  run.sh  run_tests.sh  todo
app/: __init__.py  analyzer.py  database.py  financial_data.py  financial_data_fixed.py  financial_data_new.py  formatter.py  llm_service.py  main.py  models.py
app/routers/: __init__.py  documents.py  memos.py  uploads.py
app/utils/: gemini.py  prompt.py
credit_lense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/uploads/: credit_memo_Company_20250429.docx  credit_memo_Porshe_20250509.docx  credit_memo_Porshe_20250521.docx  credit_memo_Porshe_20250523.docx  credit_memo_Porshe_20250524.docx  credit_memo_Porshe_Full_20250523.docx  credit_memo_Porshe_Full_20250524.docx  credit_memo_Porshe_Full_20250525.docx  credit_memo_Porshe_Full_20250526.docx
docs/: next.md
output/: credit_memo_Porshe_20250429.docx
scripts/: reinstall_dependencies.sh  run.sh  run_app.py  run_tests.py  run_tests.sh
static/css/: styles.css
static/js/: main.js
templates/: documents.html  financial_data.html  index.html  memo_format.html  memos.html  methodology.html  upload.html  view_memo.html
tests/: README.md  conftest.py
tests/integration/: test_document_endpoints.py  test_memo_endpoints.py
tests/unit/: test_analyzer.py  test_financial_data.py  test_formatter.py  test_llm_service.py  test_models.py
