[project]
name = "credit-lense"
version = "0.1.0"
description = "Credit Memo writer backed by AI, which gets PDF, path it through the credit analysis methodology and produce a report"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "pylint>=3.3.6",
    "pymupdf>=1.25.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uv>=0.6.14",
]
